--- a/public/index.html
+++ b/public/index.html
@@ -139,13 +139,14 @@
     </form>
 
     <div id="flash-message">
-        This &lt;div> should be invisible until a message appears.  test.
+        This &lt;div> should be invisible until a message appears.
     </div>
 
     <div id="obj-viewer">
     </div>
     <os-statement>
-        This site is open source.  <a target="_blank" href="https://github.com/CenterForDigitalHumanities/TinyPen">Improve this page</a>
+        This site is open source.
+        <a target="_blank" href="https://github.com/CenterForDigitalHumanities/TinyPen">Improve this page</a>
     </os-statement>
 </body>
 
