Wording changed in favor of TinyPen

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Tiny Things by Rerum</title>
+    <title>TinyPen</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script type="module" src="scripts/main.js"></script>
 </head>
